--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": ">=8.2.11",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
         "ruflin/elastica": "^7.3",
         "runtime/frankenphp-symfony": "^0.1.1",
