--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ext-iconv": "*",
         "ruflin/elastica": "^7.3",
         "runtime/frankenphp-symfony": "^0.1.1",
+        "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
