--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,9 +20,16 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Api\:
+        resource: '../src/Api'
+        tags: [ 'controller.service_arguments' ]
+
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Services\:
+        resource: '../src/Services'
+        tags: ['controller.service_arguments']
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
